--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,12 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>2.3.0</version>
-        <!-- <version>1.3.1</version>-->
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <!--<version>3.7.2</version> -->
+            <!--<version>3.7.2</version>版本兼容性有问题 -->
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.netty/netty-resolver-dns -->
         <dependency>
@@ -41,6 +40,7 @@
             <version>4.1.90.Final</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.oshi/oshi-core -->
+        <!-- 其实可以用jdk自带的,但都有问题-->
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
@@ -50,7 +50,7 @@
     <build>
         <plugins>
             <plugin>
-                <!-- clean + package -->
+                <!-- 打包过程:clean + package -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
