配置从配置文件application.properties中读取

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
+# 网页入口
 server.port=80
 
+# 保存在启动目录的sqlite.db内
 spring.datasource.driver-class-name=org.sqlite.JDBC
-
 spring.datasource.url=jdbc:sqlite:sqlite.db
 spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.maximum-pool-size=1 
+spring.datasource.hikari.maximum-pool-size=1
 
+# 自动初始化数据库脚本,每次检查
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
 logging.level.netty=error
 logging.level.com=error
+
+# 自定义
+netty.dns.default-ttl=1
+netty.dns.remote-dns-host=223.6.6.6
+
